<resources>
    <string name="app_name">Pamp</string>
    <string name="app_code" translatable="false">ra5v9</string>
    <string name="facebook_app_id">871957926301011</string>
    <string name="fb_login_protocol_scheme">fb145956836131010</string>
    <string name="title_auth">Pamp</string>
    <string name="title_sign_up">Créer un compte</string>
    <string name="title_login">"Connectez-vous"</string>
    <string name="title_create_password">Finaliser votre création de compte</string>
    <string name="title_received_plans">Bons plans reçus</string>
    <string name="title_proposed_plans">Bons plans proposés</string>
    <string name="title_rebroadcast_tab_fragment">Re-Diffuser le bon plan</string>
    <string name="title_description">Description</string>
    <string name="title_delivery">Livraison</string>
    <string name="title_share">Diffusion</string>
    <string name="title_rebroadcast">Re-Diffuser</string>
    <string name="title_propose">VOTRE BON PLAN</string>
    <string name="title_delivery_date">Date de Livraison</string>
    <string name="title_delivery_place">Lieu de Livraison</string>
    <string name="title_messenger">Messagerie</string>
    <string name="title_orders">Commandes</string>
    <string name="title_edit_profile">Vos informations de profil</string>
    <string name="title_good_deal_created">Bon plan envoyé</string>
    <string name="title_good_deal_resent">Le bon plan a été re-diffusé</string>
    <string name="title_good_deal_resent_body">Votre nouveau bon plan \na été envoyé à vos proches</string>
    <string name="title_good_deal_canceled">Votre bon plan a été annulé</string>
    <string name="title_settings">Vous pouvez gérer automatiquement certains paramètres de votre bon plan :</string>
    <string name="title_participants_list">Les participants au bon plan</string>
    <string name="title_add_participants">Ajouter des destinataires</string>
    <string name="title_payment">Paiement</string>
    <string name="title_select_payment_information">Saisissez vos informations de paiement</string>
    <string name="title_add_card">Paiement</string>
    <string name="title_send_order_list">Envoyer votre liste de commande au producteur</string>
    <string name="title_bank_account">Enregistrer vos données bancaires</string>
    <string name="title_create_bank_account">Cela nous permettra de virer sur votre compte les sommes liées à vos commandes</string>
    <string name="title_change_password">Changer le mot de passe</string>
    <string name="button_sign_in">S\'inscrire</string>
    <string name="button_login_facebook">Facebook</string>
    <string name="button_login_google">Google</string>
    <string name="button_login_pamp">Se connecter</string>
    <string name="button_confirm">Valider</string>
    <string name="button_start_using">Commencez à utiliser</string>
    <string name="button_ok">OK</string>
    <string name="button_send">ENVOYER</string>
    <string name="button_send_low_case">Envoyer</string>
    <string name="button_cancel">ANNULER</string>
    <string name="button_retry">recommencez</string>
    <string name="button_propose">PROPOSER</string>
    <string name="button_re_broadcast">Re-diffuser</string>
    <string name="button_re_use">Réutiliser</string>
    <string name="button_next">suivant</string>
    <string name="button_share">Diffuser</string>
    <string name="button_order">Commander</string>
    <string name="button_change_order">MODIFIER VOTRE COMMANDE</string>
    <string name="button_save">Économiser</string>
    <string name="button_cancel_deal">Oui, j’annule</string>
    <string name="button_not_cancel_deal">Finalement, non</string>
    <string name="button_add_payment">Ajouter un moyen de paiement</string>
    <string name="button_confirm_orders">Verser l’argent sur mon compte</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_last_name">Nom</string>
    <string name="hint_birth_date">Date de naissance</string>
    <string name="hint_email">Email</string>
    <string name="hint_country">Pays de résidence</string>
    <string name="hint_address_of_residence">Adresse de résidence</string>
    <string name="hint_iban">IBAN</string>
    <string name="hint_bank_card">Aucune carte bancaire</string>
    <string name="hint_change_password">Mot de passe</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_current_password">Votre mot de passe</string>
    <string name="hint_new_password">Nouveau mot de passe</string>
    <string name="hint_confirm_password">Confirmer</string>
    <string name="hint_good_plan_name">Nom du produit</string>
    <string name="hint_good_plan_description">Décrire votre bon plan</string>
    <string name="hint_good_plan_price">Prix</string>
    <string name="hint_good_plan_price_description">Quoi? (unité : la bouteille, le pot, le kg, les 100 gr., la part, …)</string>
    <string name="hint_good_plan_quantity">Quantité maximum (optionnel)</string>
    <string name="hint_good_plan_closing_date">Date de clôture du bon plan</string>
    <string name="hint_good_plan_delivery_place">Lieu de livraison</string>
    <string name="hint_good_plan_delivery_date">Date de livraison</string>
    <string name="hint_good_plan_delivery_begin_date">Début</string>
    <string name="hint_good_plan_delivery_finish_date">Fin</string>
    <string name="hint_good_plan_delivery_select_place">Entrer un nouveau lieu de livraison</string>
    <string name="hint_bank_card_number">Numéro de carte</string>
    <string name="hint_bank_card_expiration_date">"Date d'expiration"</string>
    <string name="hint_bank_cvv">CVV</string>
    <string name="hint_add_producer_nom_du_producteur">Nom du producteur</string>
    <string name="hint_add_producer_e_mail">e-mail</string>
    <string name="hint_add_producer_tel_optionnel">Tel (optionnel)</string>
    <string name="hint_add_producer_adresse">Adresse</string>
    <string name="hint_add_producer_description_optionnel">Description (optionnel)</string>
    <string name="err_msg_required">Champs requis</string>
    <string name="err_msg_invalid_number">Numéro incorrect</string>
    <string name="err_msg_invalid_name_surname">Attention 1 à 25 caractères maximum</string>
    <string name="err_msg_select_both_dates">Veuillez sélectionner les deux date</string>
    <string name="err_msg_already_registered">Déjà enregistré</string>
    <string name="err_msg_invalid_password">Mot de passe incorrect</string>
    <string name="err_msg_invalid_password_new">Vous devez entrer au minimum 8 caractères</string>
    <string name="err_msg_invalid_email">Email incorrect</string>
    <string name="err_msg_entered_password_is_incorrect">Le mot de passe que vous avez saisi est incorrect</string>
    <string name="err_msg_invalid_email_or_empty_fields">Email invalide ou certains champs sont vides</string>
    <string name="err_msg_empty_fields_or_passwords_not_matches">Des champs sont vides ou les mots de passe de correspondent pas</string>
    <string name="err_msg_passwords_not_matches">Les mots de passe ne correspondent pas</string>
    <string name="err_msg_invalid_code">Code incorrect</string>
    <string name="err_msg_invalid_licence">Invalid licence ID</string>
    <string name="err_msg_bad_credentials">Email ou mot de passe incorrect</string>
    <string name="err_msg_something_goes_wrong">"Quelque chose s'est mal passé"</string>
    <string name="err_msg_no_data">Pas de données</string>
    <string name="err_msg_no_requests">You Have No Requesy</string>
    <string name="err_msg_connection_problem">Connexion perdue</string>
    <string name="err_msg_user_not_registered">Utilisateur non enregistré</string>
    <string name="err_msg_email_invalid">Email invalide</string>
    <string name="err_msg_play_services_unavailable">"Google Play Services n'est pas disponible."</string>
    <string name="err_msg_select_address_fail">"Erreur lors de la sélection de l'adresse. Réessayer"</string>
    <string name="err_msg_avatar_is_required">Avatar is required for Driver</string>
    <string name="err_msg_set_rating">"Définir l'évaluation des utilisateurs"</string>
    <string name="err_msg_token_expired">Le jeton a expiré</string>
    <string name="err_msg_select_start_point">Sélectionnez le point de départ</string>
    <string name="err_msg_select_destination">Select destination</string>
    <string name="err_msg_select_route">Select your route</string>
    <string name="err_msg_request_is_sent">Your Request has been sent successfully.\nTrack status in the Requests Screen.</string>
    <string name="err_msg_specify_departure_time">Specify departure time</string>
    <string name="err_msg_specify_ride_flexibility">Specify ride flexibility</string>
    <string name="err_msg_user_not_driver">Please complete your driver profile by inserting a vehicle</string>
    <string name="err_msg_select_date_in_future">Sélectionnez une date dans le futur</string>
    <string name="err_msg_title_no_travel">No Travel on your route</string>
    <string name="err_msg_no_route">Follow this route to get alerts about new trip or\noffer a trip yourself and find passengers</string>
    <string name="err_msg_title_no_result_for_request">No any result on your request</string>
    <string name="text_good_plan_name">- nom du produit</string>
    <string name="text_good_plan_description">- décrire votre bon plan</string>
    <string name="text_good_plan_price">- prix</string>
    <string name="text_good_plan_price_description">- quoi? (unité)</string>
    <string name="text_good_plan_delivery_place">- lieu de livraison</string>
    <string name="text_good_plan_delivery_date">- date de livraison</string>
    <string name="text_second_tutorial_title_text">Tout l’esprit des bons plans dans une appli !</string>
    <string name="text_second_tutorial_second_text">"Aussi facile qu'écrire un SMS"</string>
    <string name="text_second_tutorial_third_text">"Récoltez et gérez vos commandes en un temps limité"</string>
    <string name="text_second_tutorial_fourth_text">"Ne vous souciez plus du paiement"</string>
    <string name="text_third_tutorial_title_text">"Le système D n’aura\njamais été aussi facile"</string>
    <string name="text_third_tutorial_second_text">Pour partager et accéder\ndirectement à toutes les\nmeilleures spécialités\nrégionales de petits\nproducteurs locaux</string>
    <string name="text_third_tutorial_third_text">"Recever des bons plans et commander en 1 clic"</string>
    <string name="text_third_tutorial_fourth_text">"Soutener les petits producteurs par une juste rémunération sans intermédiaire"</string>
    <string name="text_create_password_first">"En poursuivant, vous acceptez nos conditions d’utilisation et notre politique de confidentialité"</string>
    <string name="text_create_password_second">Conditions d’utilisation (et politique de confidentialité)</string>
    <string name="text_forgot_password">mot de passe oublié ?</string>
    <string name="text_or">ou</string>
    <string name="text_send_orders_list">Envoyer votre liste de commandes au producteur</string>
    <string name="text_change_close_date">Modifier la date de clôture du bon plan</string>
    <string name="text_change_delivery_date">Modifier la date de livraison</string>
    <string name="text_cancel_good_deal">Annuler votre bon plan</string>
    <string name="orders_confirm_dialog_message1">En confirmant votre bon plan, les commandes seront débitées puis seront versées sur votre compte bancaire.</string>
    <string name="orders_confirm_dialog_message2">Il ne vous restera plus qu’à livrer vos proches…</string>
    <string name="orders_confirm_dialog_message3">Assurez-vous avant que tout est bien calé avec le producteur… pensez à utiliser la fonctionalité « envoyer votre commande au producteur »</string>
</resources>