<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_default"
    android:paddingStart="@dimen/padding_default">

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_name" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_description" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_price" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_price" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_price_description" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_delivery_place" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_good_plan_delivery_date" />
</LinearLayout>