<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_default"
    android:paddingStart="@dimen/padding_default">

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_confirm_dialog_message1" />

    <TextView
        style="@style/ValidateErrorDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_confirm_dialog_message2" />

    <TextView
        style="@style/ProductNameTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:text="@string/orders_confirm_dialog_message3" />

</LinearLayout>