<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/text_third_tutorial_title_text"
            android:textColor="@color/textColorGray"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/text_third_tutorial_second_text"
            android:textColor="@color/textColorGray"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/text_third_tutorial_third_text"
            android:textColor="@color/textColorGray"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/text_third_tutorial_fourth_text"
            android:textColor="@color/textColorGray"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>
