<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_containerFCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack_FCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            style="@style/AuthTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_create_password"
            android:textSize="@dimen/text_size_default" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword_FCP"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_containerFCP"
        android:layout_marginTop="@dimen/margin_double"
        android:hint="@string/hint_password"
        android:paddingTop="73dp"
        app:passwordToggleDrawable="@drawable/ic_visibility_black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etPassword_FCP"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilConfPassword_FCP"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilPassword_FCP"
        android:hint="@string/hint_confirm_password"
        app:passwordToggleDrawable="@drawable/ic_visibility_black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etConfPassword_FCP"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilConfPassword_FCP"
        android:orientation="vertical"
        android:paddingTop="59dp">

        <TextView
            style="@style/SignUpTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/text_create_password_first" />

        <TextView
            style="@style/SignUpTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/text_create_password_second" />
    </LinearLayout>


    <Button
        android:id="@+id/btnConfirm_FCP"
        style="@style/ConfirmButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/confirm_button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_default"
        android:background="@drawable/bg_confirm_button"
        android:paddingBottom="@dimen/margin_half"
        android:paddingEnd="@dimen/margin_triple"
        android:paddingStart="@dimen/margin_triple"
        android:paddingTop="@dimen/margin_half"
        android:text="@string/button_confirm" />
</RelativeLayout>