<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_containerFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack_FL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            style="@style/AuthTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_login" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail_FL"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_containerFL"
        android:layout_marginTop="@dimen/margin_double"
        android:hint="@string/hint_email"
        android:paddingTop="@dimen/margin_double">

        <EditText
            android:id="@+id/etEmail_FL"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_edit" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword_FL"
        style="@style/TILStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilEmail_FL"
        android:hint="@string/hint_password"
        app:passwordToggleDrawable="@drawable/ic_visibility_black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etPassword_FL"
            style="@style/AuthEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword_FL"
        style="@style/LoginForgotPasswordStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tilPassword_FL"
        android:paddingTop="@dimen/padding_large"
        android:text="@string/text_forgot_password" />

    <FrameLayout
        android:id="@+id/btnLoginWithPamp_FL"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_below="@+id/tvForgotPassword_FL"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_triple"
        android:background="@drawable/bg_pamp_auth_button">

        <TextView
            style="@style/AuthButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_login_pamp"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvOR_FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginWithPamp_FL"
        android:gravity="center_horizontal"
        android:text="@string/text_or"
        android:textSize="@dimen/text_size_default" />

    <FrameLayout
        android:id="@+id/btnLoginFacebook_FL"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_below="@+id/tvOR_FL"
        android:layout_marginBottom="@dimen/margin_half"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@drawable/bg_facebook_auth_button">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/padding_default"
            android:src="@drawable/ic_facebook" />

        <TextView
            style="@style/AuthButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login_facebook"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnLoginGoogle_FL"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_below="@+id/btnLoginFacebook_FL"
        android:layout_marginBottom="@dimen/margin_half"
        android:layout_marginTop="@dimen/margin_half"
        android:background="@drawable/bg_google_auth_button">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/padding_default"
            android:src="@drawable/ic_google" />

        <TextView
            style="@style/AuthButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login_google"
            android:textColor="@android:color/white" />
    </FrameLayout>
</RelativeLayout>